--- a/Converter/appsettings.Development.json
+++ b/Converter/appsettings.Development.json
@@ -1,5 +1,8 @@
 {
   "DetailedErrors": true,
+  "ConnectionStrings": {
+    "CurrencyString": "Server=(localdb)\\mssqllocaldb;Database=currencydb;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
