--- a/Converter.BusinnesLogic/Converter.BusinnesLogic.csproj
+++ b/Converter.BusinnesLogic/Converter.BusinnesLogic.csproj
@@ -6,8 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="Services\" />
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
   </ItemGroup>
 
   <ItemGroup>
